--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ dependencies = [
     "matplotlib>=3.8.3",
     "httpx>=0.27.0",
     "plotly>=5.20.0",
+    "streamlit>=1.32.2",
+    "watchdog>=4.0.0",
+    "loguru>=0.7.2",
+    "streamlit-folium>=0.18.0",
+    "haversine>=2.8.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
