--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "loguru>=0.7.2",
     "streamlit-folium>=0.18.0",
     "haversine>=2.8.1",
+    "mosaic-widget>=0.1.0",
+    "marimo>=0.3.3",
+    "ipywidgets>=8.1.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
