--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
     "mosaic-widget>=0.1.0",
     "marimo>=0.3.3",
     "ipywidgets>=8.1.2",
+    "itables>=2.0.0",
+    "openparse[ml]>=0.5.1",
+    "python-dotenv>=1.0.1",
+    "markdownify>=0.12.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
