--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "openparse[ml]>=0.5.1",
     "python-dotenv>=1.0.1",
     "markdownify>=0.12.1",
+    "ydata-profiling>=4.7.0",
+    "setuptools>=69.2.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
